# iVKLegacy

./: ChangeLog  compile_commands.json  configure.ac
src/: AppDelegate.h  AppDelegate.m  Info.plist  Makefile.am  RootViewController.h  RootViewController.m  URLImageView.h  URLImageView.m  VKConnect.h  VKConnect.m  VKFeedViewController.h  VKFeedViewController.m  cVK.h  config.h  http.c  iTunesArtwork  iTunesMetadata.plist  oauth.c
